force-app/main/default/objects/TIG_Entity_Bank_Information__c/TIG_Entity_Bank_Information__c.object-meta.xml
<CustomObject>
    <label>TIG Entity Bank Information</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TIG Entity Bank Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>