force-app/main/default/objects/TIG_Entity_Bank_Information__c/fields/BSB__c.field-meta.xml
<CustomField>
    <fullName>BSB__c</fullName>
    <label>BSB</label>
    <length>100</length>
    <type>Text</type>
</CustomField>