force-app/main/default/objects/TIG_Entity_Bank_Information__c/fields/IBAN_No__c.field-meta.xml
<CustomField>
    <fullName>IBAN_No__c</fullName>
    <label>IBAN No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>