force-app/main/default/objects/TIG_Entity_Bank_Information__c/fields/Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>Sort_Code__c</fullName>
    <label>Sort Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>