force-app/main/default/objects/TIG_Entity_Bank_Information__c/fields/TIG_Entity__c.field-meta.xml
<CustomField>
    <fullName>TIG_Entity__c</fullName>
    <label>TIG Entity Name</label>
    <referenceTo>TIG_Entity__c</referenceTo>
    <relationshipLabel>TIG Entity Bank Informations</relationshipLabel>
    <relationshipName>TIG_Entity_Bank_Informations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>